# marketing-agent-web

./: .gitignore  README.md  lefthook.yml  pyproject.toml
src/: config.py  main.py
src/tools/: __init__.py  ddg_search.py
src/web_crawler/: crawler.py
src/web_crawler/agents/: __init__.py  base_agent.py  output_structures.py
src/web_crawler/agents/critic/: __init__.py  agent.py  node.py  state.py
src/web_crawler/agents/search/: __init__.py  agent.py  node.py  output_structures.py  state.py
src/web_crawler/agents/selector/: __init__.py  agent.py  node.py  state.py
